mbtiles/tests/snapshots/mbtiles__databases@norm__v1.snap
---
source: mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'images'
sql = '''
CREATE TABLE images (
             tile_id text NOT NULL PRIMARY KEY,
             tile_data blob)'''
values = [
    '(  "0F6969D7052DA9261E31DDB6E88C136E", blob(remove)  )',
    '(  "51037A4A37730F52C8732586D3AAA316", blob(same)  )',
    '(  "535A5575B48444EDEB926815AB26EC9B", blob(1-keep-1-rm)  )',
    '(  "63A9F0EA7BB98050796B649E85481845", blob(root)  )',
    '(  "720C02778717818CC0A869955BA2AFB6", blob(non-empty)  )',
    '(  "D41D8CD98F00B204E9800998ECF8427E", blob()  )',
    '(  "EFE0AE5FD114DE99855BC2838BE97E1D", blob(edit-v1)  )',
]

[[]]
type = 'table'
tbl_name = 'map'
sql = '''
CREATE TABLE map (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_id text,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  3, 6, 7, "63A9F0EA7BB98050796B649E85481845"  )',
    '(  5, 0, 0, "51037A4A37730F52C8732586D3AAA316"  )',
    '(  5, 0, 1, "D41D8CD98F00B204E9800998ECF8427E"  )',
    '(  5, 1, 1, "EFE0AE5FD114DE99855BC2838BE97E1D"  )',
    '(  5, 1, 2, "D41D8CD98F00B204E9800998ECF8427E"  )',
    '(  5, 1, 3, "720C02778717818CC0A869955BA2AFB6"  )',
    '(  5, 2, 2, "0F6969D7052DA9261E31DDB6E88C136E"  )',
    '(  5, 2, 3, "D41D8CD98F00B204E9800998ECF8427E"  )',
    '(  6, 0, 3, "51037A4A37730F52C8732586D3AAA316"  )',
    '(  6, 0, 5, "535A5575B48444EDEB926815AB26EC9B"  )',
    '(  6, 1, 4, "EFE0AE5FD114DE99855BC2838BE97E1D"  )',
    '(  6, 2, 6, "535A5575B48444EDEB926815AB26EC9B"  )',
]

[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "9ED9178D7025276336C783C2B54D6258"  )',
    '(  "md-edit", "value - v1"  )',
    '(  "md-remove", "value - remove"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'index'
tbl_name = 'images'

[[]]
type = 'index'
tbl_name = 'map'

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'view'
tbl_name = 'tiles'
sql = '''
CREATE VIEW tiles AS
             SELECT map.zoom_level AS zoom_level,
                    map.tile_column AS tile_column,
                    map.tile_row AS tile_row,
                    images.tile_data AS tile_data
             FROM map
             JOIN images ON images.tile_id = map.tile_id'''

[[]]
type = 'view'
tbl_name = 'tiles_with_hash'
sql = '''
CREATE VIEW tiles_with_hash AS
             SELECT
                 map.zoom_level AS zoom_level,
                 map.tile_column AS tile_column,
                 map.tile_row AS tile_row,
                 images.tile_data AS tile_data,
                 images.tile_id AS tile_hash
             FROM map
             JOIN images ON images.tile_id = map.tile_id'''
